--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -7,5 +7,28 @@
 
 html,
 body {
-	height: 100%;
+	height: 100dvh;
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+	scrollbar-width: auto;
+	scrollbar-color: #64748b #334155;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+	width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+	background: #334155;
+	/* background: #334155; */
+}
+
+*::-webkit-scrollbar-thumb {
+	background-color: #1e293b;
+	border-radius: 10px;
+	border: 0px none #ffffff;
 }
